--- a/resources/views/emails/participant/forgot-password.html
+++ b/resources/views/emails/participant/forgot-password.html
@@ -47,15 +47,15 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img src="public\assets\images\logo brempi\Logo-color.png" alt="Brevetisasi DEFA Logo">
+            <img src="{logo_url}" alt="Brevetisasi DEFA Logo">
         </div>
 
-        <h2>Hello ' . $name . ',</h2>
-        
+        <h2>Hello {name},</h2>
+
         <p>Anda menerima email ini karena kami menerima permintaan reset password untuk akun Anda di Aplikasi Ujian Online Brevetisasi DEFA.</p>
-        
+
         <p style="text-align: center;">
-            <a href="' . $reset_link . '" class="button">Reset Password</a>
+            <a href="{reset_link}" class="button">Reset Password</a>
         </p>
         
         <p>Jika Anda tidak meminta reset password, tidak ada tindakan lebih lanjut yang diperlukan.</p>
