--- a/resources/views/emails/participant/forgot-password.html
+++ b/resources/views/emails/participant/forgot-password.html
@@ -47,7 +47,7 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img src="{logo_url}" alt="Brevetisasi DEFA Logo">
+            <img src="{logo_url}" alt="Brevetisasi DEFA Logo" width="150" height="auto">
         </div>
 
         <h2>Hello {name},</h2>
